Do not attempt to use data reduction proxy when holdback is enabled

BUG=726773

Review-Url: https://codereview.chromium.org/2905423002
Cr-Commit-Position: refs/heads/master@{#475723}

Former-commit-id: 93fb0767a75b443bf25bc99b1b97f48f7b074ccd