components/data_reduction_proxy/core/browser/data_reduction_proxy_network_delegate.cc
@@ -164,6 +164,9 @@ void RecordContentLengthHistograms(bool lofi_low_header_added,
 // Saver proxy.
 void VerifyHttpRequestHeaders(bool via_chrome_proxy,
                               const net::HttpRequestHeaders& headers) {
+  // If holdback is enabled, then |via_chrome_proxy| should be false.
+  DCHECK(!params::IsIncludedInHoldbackFieldTrial() || !via_chrome_proxy);
+
   if (via_chrome_proxy) {
     DCHECK(headers.HasHeader(chrome_proxy_ect_header()));
     std::string chrome_proxy_header_value;
@@ -283,16 +286,17 @@ void DataReductionProxyNetworkDelegate::OnBeforeSendHeadersInternal(
   DataReductionProxyData::ClearData(request);
 
   if (params::IsIncludedInHoldbackFieldTrial()) {
-    if (!WasEligibleWithoutHoldback(*request, proxy_info, proxy_retry_info))
-      return;
-    // For the holdback field trial, still log UMA as if the proxy was used.
-    data = DataReductionProxyData::GetDataAndCreateIfNecessary(request);
-    if (data)
-      data->set_used_data_reduction_proxy(true);
-
-    headers->RemoveHeader(chrome_proxy_header());
-    VerifyHttpRequestHeaders(false, *headers);
-    return;
+    if (WasEligibleWithoutHoldback(*request, proxy_info, proxy_retry_info)) {
+      // For the holdback field trial, still log UMA as if the proxy was used.
+      data = DataReductionProxyData::GetDataAndCreateIfNecessary(request);
+      if (data)
+        data->set_used_data_reduction_proxy(true);
+    }
+    // If holdback is enabled, |proxy_info| must not contain a data reduction
+    // proxy.
+    DCHECK(proxy_info.is_empty() ||
+           !data_reduction_proxy_config_->IsDataReductionProxy(
+               proxy_info.proxy_server(), nullptr));
   }
 
   bool using_data_reduction_proxy = true;
@@ -306,6 +310,9 @@ void DataReductionProxyNetworkDelegate::OnBeforeSendHeadersInternal(
                  proxy_info.proxy_server(), nullptr)) {
     using_data_reduction_proxy = false;
   }
+  // If holdback is enabled, |using_data_reduction_proxy| must be false.
+  DCHECK(!params::IsIncludedInHoldbackFieldTrial() ||
+         !using_data_reduction_proxy);
 
   LoFiDecider* lofi_decider = nullptr;
   if (data_reduction_proxy_io_data_)
